// protoc -I ./ --go_out=plugins=grpc:./ courses.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.csas.protos";
option java_outer_classname = "CoursesProto";
option objc_class_prefix = "CAS";

package taskpb;

service Courses {
  rpc CreateTask(TaskReq) returns (TaskReply) {}
}

message TaskReq {
  int64 schoolID = 1;
  int64 arrangementID = 2;
  int64 calendarID = 3;
  int64 taskID = 4;
}

message TaskReply {
  string taskID = 1;
}
